Prevent wrapping of text in PersonViewTableHead

--- a/src/components/misc/personViews/PersonViewTableHead.scss
+++ b/src/components/misc/personViews/PersonViewTableHead.scss
@@ -5,6 +5,10 @@
         font-size: 0.8em;
         font-weight: normal;
         text-align: left;
+
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .PersonViewTableHead-newColumn {
